add physician-groups page

--- a/src/physician-groups.html
+++ b/src/physician-groups.html
@@ -112,13 +112,27 @@
     <div class="wrapper">
         <main class="main container">
             <header class="section__header">
-                <h1 class="title section__title">Physicians and Healthcare Providers</h1>
-                <div class="subtitle section__subtitle">Save on your premium through Accuro pro extensive premium
-                    discount offerings.
-                </div>
+                <h1 class="title section__title">Physician Groups</h1>
             </header>
-
-            <section class="discounts">
+            <section class="group container">
+                <div class="group__content">
+                    <h2 class="title">Save on your group premium through Accuro pro extensive premium discount
+                        offerings.
+                    </h2>
+                    <div class="group__text">
+                        <p>Accuro pro experienced team of underwriters, claims staff,
+                            and risk management experts understand the unique needs facing physician groups and work
+                            closely with you to structure
+                            a program to make sure all of your needs are addressed,
+                            so you can focus on providing quality healthcare.</p>
+                    </div>
+                    <button class="main-btn btn-reset">Read more</button>
+                </div>
+                <div class="group__img">
+                    <img src="assets/img/base/group.png" alt="">
+                </div>
+            </section>
+            <section class="discounts reverse">
                 <div class="discounts__content">
                     <h2 class="title discounts__title">Available Discounts:</h2>
                     <div class="discounts__text">
@@ -138,65 +152,46 @@
                     </div>
                     <div class="subtitle">Not all discounts can be combined. Discount availability and percentages may
                         vary by state.</div>
-                    <button class="main-btn btn-reset discounts__btn">Read more</button>
                 </div>
                 <div class="discounts__img">
                     <img src="assets/img/base/discounts.png" alt="">
                 </div>
             </section>
-
-            <section class="options">
-                <div class="subtitle">Accuro pro offers a variety of coverage options to best serve your practice needs
+            <section class="benefits container">
+                <div class="benefits__img">
+                    <img src="assets/img/base/benefits.png" alt="">
                 </div>
-                <h2 class="title options__title">Coverage Options</h2>
-                <div class="options__list">
-                    <div class="options__item w-30">
-                        <h3>Claims-Made Coverage</h3>
-                        <div>Provides coverage for incidents that occur after the retroactive date and which are
-                            reported to Accuro pro during your
-                            active policy, or any extended reporting period.</div>
+                <div class="benefits__content">
+                    <h1 class="benefits__title title">Product Benefits</h1>
+                    <div class="subtitle benefits__subtitle">Availability may vary by state
                     </div>
-                    <div class="options__item w-30">
-                        <h3>Occurrence Coverage</h3>
-                        <div>Provides coverage for incidents that occur during your policy period irrespective of when
-                            the claim is reported.</div>
-                    </div>
-                    <div class="options__item w-30">
-                        <h3>Modified Claims-Made Coverage (Not available in New York)</h3>
-                        <div>Provides coverage on a claims-made basis with an automatic prepaid extended reporting
-                            coverage (Tail). Also known as
-                            Occurrence Plus.</div>
-                    </div>
-                    <div class="options__item w-30">
-                        <h3>New York State Excess Liability Coverage (Section 18)</h3>
-                        <div>An additional $1,000,000 per claim / $3,000,000 annual aggregate limit of coverage excess
-                            of your primary limit is
-                            available at no cost to qualifying eligible physicians through New York State.</div>
-                    </div>
-                    <div class="options__item w-60">
-                        <h3>Direct Pay Excess Coverage (*Only available in New York)</h3>
-                        <div>This additional layer of coverage of $1,000,000 per claim / $3,000,000 annual aggregate is
-                            available to physicians who
-                            do not maintain or qualify for NY Section 18 Excess coverage and wish to purchase an excess
-                            policy.
-                            <span>*Increased primary limits of liability are available to policyholders in Connecticut,
-                                Pennsylvania, and New Jersey.</span>
-                        </div>
-                    </div>
-                    <div class="options__item w-50">
-                        <h3>Medical Entity Coverage for your PC, LLC, PLLC, or Partnership</h3>
-                        <div>Coverage is available to insure your entity, its members in their capacity as such, and
-                            non-physician employees of the
-                            entity for their respective acts and omissions. It also covers the entity and its members
-                            for their vicarious liability
-                            arising from the alleged acts and omissions of others.</div>
-                    </div>
-                    <div class="options__item w-50">
-                        <h3>Administrative Action Legal Representation Coverage</h3>
-                        <div>At no additional cost, all Accuro pro medical professional liability policies include up to
-                            $25,000 in coverage for fees
-                            related to legal representation, subject to certain limitations, in connection with
-                            administrative disciplinary actions.</div>
+                    <div class="content">
+                        <ul>
+                            <li>With exceptional savings through our premium discount program, Accuro pro offers
+                                competitive
+                                premiums in virtually every
+                                specialty.</li>
+                            <li>Part of a group? Accuro pro offers rate and form flexibility to qualifying groups and a
+                                streamlined
+                                application process
+                                for group practices.</li>
+                            <li>Claims-Made, Occurrence, and Modified Claims-Made coverage options.</li>
+                            <li>General Liability coverage available for your entity when you purchase Professional
+                                Liability
+                                coverage.</li>
+                            <li>Coverage for your medical director, partnership and corporation, ambulatory surgery
+                                center, and
+                                others.</li>
+                            <li>Coverage for administrative (disciplinary) actions at no additional cost.</li>
+                            <li>Aggressive claims handling by a dedicated & experienced claims team.</li>
+                            <li>Coverage options for the entire healthcare team.</li>
+                            <li>Acess to actionable insights through the Candello MPL data coding collaborative.</li>
+                            <li>Access to our award-winning risk management programs.</li>
+                            <li>Free consultation services with Accuro pro risk management experts and attorneys.</li>
+                            <li>Full suite of online policy management tools through Accuro pro Client Portal.</li>
+                            <li>Free one-to-one and group peer support.</li>
+                            <li>Access to Accuro pro Physicians’ Club events.</li>
+                        </ul>
                     </div>
                 </div>
             </section>
